#+TITLE: Changelog

* Unreleased

* 2021-07-16
  Readme updates
  Monthly library updates

  | :name                             |                                 :current |                                  :latest |
  |-----------------------------------+------------------------------------------+------------------------------------------|
  | borkdude/carve                    | 3fcc2a900e4fa4be2c9a539c9971c60e2e921162 | c9a4dec89032f2003cc439c473fcd3c41e809669 |
  | com.bhauman/figwheel-main         |                                   0.2.11 |                                   0.2.13 |
  | com.cognitect/test-runner         | 705ad25bbf0228b1c38d0244a36001c2987d7337 | f597341b6ca7bb4cf027e0a34a6710ca9cb969da |
  | com.github.seancorfield/depstar   |                                  2.0.216 |                                  2.1.267 |
  | com.github.seancorfield/next.jdbc |                                  1.2.659 |                                  1.2.674 |
  | djblue/portal                     |                                   0.11.2 |                                   0.12.0 |
  | org.clojure/clojurescript         |                                 1.10.773 |                                 1.10.866 |
  | org.clojure/data.json             |                                    2.3.1 |                                    2.4.0 |
  | org.clojure/tools.deps.graph      |                                   1.0.56 |                                   1.0.63 |
  | vlaaad/reveal                     |                                  1.3.209 |                                  1.3.212 |

  Available diffs:
  - https://github.com/borkdude/carve/compare/3fcc2a900e4fa4be2c9a539c9971c60e2e921162...c9a4dec89032f2003cc439c473fcd3c41e809669
  - https://github.com/bhauman/figwheel-main/compare/v0.2.11...head
  - https://github.com/cognitect-labs/test-runner/compare/705ad25bbf0228b1c38d0244a36001c2987d7337...f597341b6ca7bb4cf027e0a34a6710ca9cb969da