@@ -9,11 +9,11 @@ jobs:
   lint:
     runs-on: ubuntu-20.04
     steps:
-    - uses: DeLaGuardo/setup-clj-kondo@master
-      with:
-        version: '2020.04.05'
+      - uses: DeLaGuardo/setup-clj-kondo@master
+        with:
+          version: '2021.06.18'
 
-    - uses: actions/checkout@v2.3.4
+      - uses: actions/checkout@latest
 
-    - name: Run clj-kondo on ubuntu
-      run: clj-kondo --lint deps.edn
+      - name: Run on Ubuntu
+        run: clj-kondo --lint deps.edn
